--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 			<version>2.12.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.codeborne</groupId>
+			<artifactId>phantomjsdriver</artifactId>
+			<version>1.4.4</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
